--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,45 @@
-{\rtf1\ansi\ansicpg1252\cocoartf1561\cocoasubrtf400
-{\fonttbl\f0\fnil\fcharset0 Menlo-Regular;\f1\fnil\fcharset0 Menlo-Bold;\f2\fnil\fcharset0 Menlo-Italic;
-}
-{\colortbl;\red255\green255\blue255;\red109\green109\blue109;\red232\green249\blue230;\red76\green145\blue37;
-}
-{\*\expandedcolortbl;;\csgenericrgb\c42745\c42745\c42745;\csgenericrgb\c90980\c97647\c90196;\csgenericrgb\c29804\c56863\c14510;
-}
-\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\partightenfactor0
+# Created by .ignore support plugin (hsz.mobi)
+### intellij
+.idea/
+*.iml
+*.iws
+### Maven template
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+test-output/
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
+### macOS template
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
 
-\f0\fs28 \cf2 # Created by .ignore support plugin (hsz.mobi)\
-\
+# Icon must end with two \r
+Icon
 
-\f1\b \cb3 ### Eclipse\cb1 \
+# Thumbnails
+._*
 
-\f2\i\b0 .classpath\
-.project\
-.settings/\
-\
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
 
-\f1\i0\b \cb3 ### Intellij\cb1 \
-
-\f0\b0 \cf4 .idea\cf2 /\
-\cf4 *.iml\
-
-\f2\i \cf2 *.iws\
-\
-
-\f1\i0\b \cb3 ### Mac\cb1 \
-
-\f2\i\b0 .DS_Store\
-\
-
-\f1\i0\b \cb3 ### Maven template\cb1 \
-
-\f2\i\b0 log/\
-target/\
-test-output/\
-pom.xml.tag\
-pom.xml.releaseBackup\
-pom.xml.versionsBackup\
-pom.xml.next\
-release.properties\
-dependency-reduced-pom.xml\
-buildNumber.properties\
-.mvn/timing.properties\
-\
-
-\f0\i0 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)\
-
-\f2\i !/.mvn/wrapper/maven-wrapper.jar\
-\
-}
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
